# sayuki

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  README.md  flake.nix
assets/: config.zt
crates/sayuki-compositor/: Cargo.toml
crates/sayuki-compositor/src/: cli.rs  config.rs  foreign_toplevel.rs  grabs.rs  ipc.rs  key_daemon.rs  logging.rs  main.rs  output.rs  project.rs  render.rs  screencopy.rs  state.rs  wayland.rs
crates/sayuki-compositor/src/backend/: mod.rs  nested.rs  udev.rs
crates/sayuki-compositor/src/input/: actions.rs  keybindings.rs  mod.rs  spawn.rs
crates/sayuki-compositor/src/protocols/: mod.rs  project.rs
crates/sayuki-compositor/src/render/: help.rs
crates/sayuki-compositor/src/state/: actions.rs  project.rs
crates/sayuki-compositor/src/wm/: focus.rs  mod.rs  pin.rs  snap.rs  swap.rs  viewport.rs
crates/sayuki-config/: Cargo.toml
crates/sayuki-config/src/: lib.rs
crates/sayuki-core/: Cargo.toml
crates/sayuki-core/src/: lib.rs
crates/sayuki-input/: Cargo.toml
crates/sayuki-input/src/: lib.rs
crates/sayuki-ipc/: Cargo.toml
crates/sayuki-ipc/src/: lib.rs
crates/sayuki-protocols/: Cargo.toml
crates/sayuki-protocols/protocols/: sayuki-canvas-v1.xml  sayuki-project-v1.xml
crates/sayuki-protocols/src/: lib.rs
crates/sayuki-render/: Cargo.toml
crates/sayuki-render/src/: lib.rs
crates/sayuki-wm/: Cargo.toml
crates/sayuki-wm/src/: focus.rs  lib.rs  pin.rs  project.rs  snap.rs  swap.rs  tiling.rs  viewport.rs
crates/sayukictl/: Cargo.toml
crates/sayukictl/src/: main.rs
docs/: milestone-5-window-manager-model.md  milestone-6-desktop-protocols.md  milestone-7-config-and-ipc.md  milestone-9-first-party-protocols.md  roadmap.md
