[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://example.invalid/sayuki"
rust-version = "1.95"

[workspace.dependencies]
bitflags = "2.11"
calloop = "0.14"
clap = { version = "4.6", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
smithay = { version = "0.7", default-features = false, features = [
  "backend_winit",
  "desktop",
  "wayland_frontend",
] }
snafu = "0.9"
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"
unwrap_used = "warn"
