[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://example.invalid/sayuki"
rust-version = "1.95"

[workspace.dependencies]
bitflags = "2.11"
calloop = "0.14"
clap = { version = "4.6", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
inotify = "0.11"
smithay = { version = "0.7", default-features = false, features = [
  "backend_drm",
  "backend_gbm",
  "backend_libinput",
  "backend_session_libseat",
  "backend_udev",
  "backend_winit",
  "desktop",
  "renderer_gl",
  "renderer_multi",
  "renderer_pixman",
  "wayland_frontend",
] }
smithay-drm-extras = "0.1"
wayland-backend = "0.3"
wayland-scanner = "0.31"
wayland-server = "0.31"
snafu = "0.9"
zutai-eval = { path = "../zutai/crates/general/eval" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"
unwrap_used = "warn"
