[package]
name = "sayuki-compositor"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
bitflags.workspace = true
calloop.workspace = true
inotify.workspace = true
clap.workspace = true
sayuki-ipc = { path = "../sayuki-ipc" }
sayuki-wm = { path = "../sayuki-wm" }
serde.workspace = true
serde_json.workspace = true
smithay.workspace = true
smithay-drm-extras.workspace = true
snafu.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zutai-eval.workspace = true

[lints]
workspace = true
