[package]
name = "sayuki-protocols"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
wayland-backend.workspace = true
wayland-scanner.workspace = true
wayland-server.workspace = true

[lints]
workspace = true
